# UniFFI-POC-Users

./: Cargo.toml  build.rs  uniffi.toml
src/: lib.rs  lock.rs  users.udl
tests/: bindgen_tests.rs  test_swift.swift
