[package]
name = "users"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "fb8dd5c0f9406ea558d0d9d86804f4688ae95e44", features = [
    "cli",
] }
uuid = { version = "1.6.1", features = ["v4"] }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "fb8dd5c0f9406ea558d0d9d86804f4688ae95e44", features = [
    "build",
] }

[dev-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "fb8dd5c0f9406ea558d0d9d86804f4688ae95e44", features = [
    "bindgen-tests",
] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
